exports[`prefer-https > invalid(1): const url = \"http://sindresorhus.com\"; 1`] = `

  1 | const url = "http://sindresorhus.com";

`;

exports[`prefer-https > invalid(1): const url = \"http://sindresorhus.com\"; 2`] = `

Message:
> 1 | const url = "http://sindresorhus.com";
    |              ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://sindresorhus.com";

`;

exports[`prefer-https > invalid(10): const url = \"http://sindresorhus.com:8080/path\"; 1`] = `

  1 | const url = "http://sindresorhus.com:8080/path";

`;

exports[`prefer-https > invalid(10): const url = \"http://sindresorhus.com:8080/path\"; 2`] = `

Message:
> 1 | const url = "http://sindresorhus.com:8080/path";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://sindresorhus.com:8080/path";

`;

exports[`prefer-https > invalid(11): const url = \"http://example.com/http://sindresorhus.com\"; 1`] = `

  1 | const url = "http://example.com/http://sindresorhus.com";

`;

exports[`prefer-https > invalid(11): const url = \"http://example.com/http://sindresorhus.com\"; 2`] = `

Message:
> 1 | const url = "http://example.com/http://sindresorhus.com";
    |              ^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://example.com/http://sindresorhus.com";

`;

exports[`prefer-https > invalid(12): const url = \"http://sindresorhus.com.\"; 1`] = `

  1 | const url = "http://sindresorhus.com.";

`;

exports[`prefer-https > invalid(12): const url = \"http://sindresorhus.com.\"; 2`] = `

Message:
> 1 | const url = "http://sindresorhus.com.";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://sindresorhus.com.";

`;

exports[`prefer-https > invalid(13): const element = <svg xmlns=\"http://www.w3.org/2000/svg\" data-url=\"http://sindresorhus.com\"></svg>; 1`] = `

  1 | const element = <svg xmlns="http://www.w3.org/2000/svg" data-url="http://sindresorhus.com"></svg>;

`;

exports[`prefer-https > invalid(13): const element = <svg xmlns=\"http://www.w3.org/2000/svg\" data-url=\"http://sindresorhus.com\"></svg>; 2`] = `

Message:
> 1 | const element = <svg xmlns="http://www.w3.org/2000/svg" data-url="http://sindresorhus.com"></svg>;
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const element = <svg xmlns="http://www.w3.org/2000/svg" data-url="https://sindresorhus.com"></svg>;

`;

exports[`prefer-https > invalid(14): const element = <div data-xmlns=\"http://sindresorhus.com\"></div>; 1`] = `

  1 | const element = <div data-xmlns="http://sindresorhus.com"></div>;

`;

exports[`prefer-https > invalid(14): const element = <div data-xmlns=\"http://sindresorhus.com\"></div>; 2`] = `

Message:
> 1 | const element = <div data-xmlns="http://sindresorhus.com"></div>;
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const element = <div data-xmlns="https://sindresorhus.com"></div>;

`;

exports[`prefer-https > invalid(15): const $xmlns = \"http://sindresorhus.com\"; 1`] = `

  1 | const $xmlns = "http://sindresorhus.com";

`;

exports[`prefer-https > invalid(15): const $xmlns = \"http://sindresorhus.com\"; 2`] = `

Message:
> 1 | const $xmlns = "http://sindresorhus.com";
    |                 ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const $xmlns = "https://sindresorhus.com";

`;

exports[`prefer-https > invalid(16): const url = \"http://www.w3.org/2000/svg/extra/path\"; 1`] = `

  1 | const url = "http://www.w3.org/2000/svg/extra/path";

`;

exports[`prefer-https > invalid(16): const url = \"http://www.w3.org/2000/svg/extra/path\"; 2`] = `

Message:
> 1 | const url = "http://www.w3.org/2000/svg/extra/path";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://www.w3.org/2000/svg/extra/path";

`;

exports[`prefer-https > invalid(17): const url = \"http://www.w3.org\"; 1`] = `

  1 | const url = "http://www.w3.org";

`;

exports[`prefer-https > invalid(17): const url = \"http://www.w3.org\"; 2`] = `

Message:
> 1 | const url = "http://www.w3.org";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://www.w3.org";

`;

exports[`prefer-https > invalid(18): const uri = \"http://example.com/identifier/value\"; 1`] = `

Options:
- ignore:
    - 'http://other.example/identifier/value'

Code:
  1 | const uri = "http://example.com/identifier/value";

`;

exports[`prefer-https > invalid(18): const uri = \"http://example.com/identifier/value\"; 2`] = `

Message:
> 1 | const uri = "http://example.com/identifier/value";
    |              ^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://example.com/identifier/value";

`;

exports[`prefer-https > invalid(19): const uri = \"http://example.com/identifier/value/extra\"; 1`] = `

Options:
- ignore:
    - 'http://example.com/identifier/value'

Code:
  1 | const uri = "http://example.com/identifier/value/extra";

`;

exports[`prefer-https > invalid(19): const uri = \"http://example.com/identifier/value/extra\"; 2`] = `

Message:
> 1 | const uri = "http://example.com/identifier/value/extra";
    |              ^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://example.com/identifier/value/extra";

`;

exports[`prefer-https > invalid(2): const url = \`http://sindresorhus.com/path\`; 1`] = `

  1 | const url = \`http://sindresorhus.com/path\`;

`;

exports[`prefer-https > invalid(2): const url = \`http://sindresorhus.com/path\`; 2`] = `

Message:
> 1 | const url = \`http://sindresorhus.com/path\`;
    |              ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = \`https://sindresorhus.com/path\`;

`;

exports[`prefer-https > invalid(20): const uri = \"http://www.w3.org/2000/09/xmldsig-other#sha1\"; 1`] = `

  1 | const uri = "http://www.w3.org/2000/09/xmldsig-other#sha1";

`;

exports[`prefer-https > invalid(20): const uri = \"http://www.w3.org/2000/09/xmldsig-other#sha1\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2000/09/xmldsig-other#sha1";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2000/09/xmldsig-other#sha1";

`;

exports[`prefer-https > invalid(21): const uri = \"http://www.w3.org/2000/09/xmldsig/path\"; 1`] = `

  1 | const uri = "http://www.w3.org/2000/09/xmldsig/path";

`;

exports[`prefer-https > invalid(21): const uri = \"http://www.w3.org/2000/09/xmldsig/path\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2000/09/xmldsig/path";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2000/09/xmldsig/path";

`;

exports[`prefer-https > invalid(22): const uri = \"http://www.w3.org/2002/06/xmldsig-filter2/extra\"; 1`] = `

  1 | const uri = "http://www.w3.org/2002/06/xmldsig-filter2/extra";

`;

exports[`prefer-https > invalid(22): const uri = \"http://www.w3.org/2002/06/xmldsig-filter2/extra\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2002/06/xmldsig-filter2/extra";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2002/06/xmldsig-filter2/extra";

`;

exports[`prefer-https > invalid(23): const uri = \"http://www.w3.org/2006/12/xml-c14n11?format=xml\"; 1`] = `

  1 | const uri = "http://www.w3.org/2006/12/xml-c14n11?format=xml";

`;

exports[`prefer-https > invalid(23): const uri = \"http://www.w3.org/2006/12/xml-c14n11?format=xml\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2006/12/xml-c14n11?format=xml";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2006/12/xml-c14n11?format=xml";

`;

exports[`prefer-https > invalid(24): const uri = \"http://www.w3.org/2005/xpath-functions/map/extra\"; 1`] = `

  1 | const uri = "http://www.w3.org/2005/xpath-functions/map/extra";

`;

exports[`prefer-https > invalid(24): const uri = \"http://www.w3.org/2005/xpath-functions/map/extra\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2005/xpath-functions/map/extra";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2005/xpath-functions/map/extra";

`;

exports[`prefer-https > invalid(25): const uri = \"http://www.w3.org/2001/XInclude/extra\"; 1`] = `

  1 | const uri = "http://www.w3.org/2001/XInclude/extra";

`;

exports[`prefer-https > invalid(25): const uri = \"http://www.w3.org/2001/XInclude/extra\"; 2`] = `

Message:
> 1 | const uri = "http://www.w3.org/2001/XInclude/extra";
    |              ^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.w3.org/2001/XInclude/extra";

`;

exports[`prefer-https > invalid(26): const uri = \"http://schemas.android.com/apk/res/android/extra\"; 1`] = `

  1 | const uri = "http://schemas.android.com/apk/res/android/extra";

`;

exports[`prefer-https > invalid(26): const uri = \"http://schemas.android.com/apk/res/android/extra\"; 2`] = `

Message:
> 1 | const uri = "http://schemas.android.com/apk/res/android/extra";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://schemas.android.com/apk/res/android/extra";

`;

exports[`prefer-https > invalid(27): const uri = \"http://schemas.android.com/apk/res/android?theme=dark\"; 1`] = `

  1 | const uri = "http://schemas.android.com/apk/res/android?theme=dark";

`;

exports[`prefer-https > invalid(27): const uri = \"http://schemas.android.com/apk/res/android?theme=dark\"; 2`] = `

Message:
> 1 | const uri = "http://schemas.android.com/apk/res/android?theme=dark";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://schemas.android.com/apk/res/android?theme=dark";

`;

exports[`prefer-https > invalid(28): const uri = \"http://schemas.android.com/apk/res/123-invalid\"; 1`] = `

  1 | const uri = "http://schemas.android.com/apk/res/123-invalid";

`;

exports[`prefer-https > invalid(28): const uri = \"http://schemas.android.com/apk/res/123-invalid\"; 2`] = `

Message:
> 1 | const uri = "http://schemas.android.com/apk/res/123-invalid";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://schemas.android.com/apk/res/123-invalid";

`;

exports[`prefer-https > invalid(29): const uri = \"http://maven.apache.org/xsd/maven-4.0.0.xsd\"; 1`] = `

  1 | const uri = "http://maven.apache.org/xsd/maven-4.0.0.xsd";

`;

exports[`prefer-https > invalid(29): const uri = \"http://maven.apache.org/xsd/maven-4.0.0.xsd\"; 2`] = `

Message:
> 1 | const uri = "http://maven.apache.org/xsd/maven-4.0.0.xsd";
    |              ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://maven.apache.org/xsd/maven-4.0.0.xsd";

`;

exports[`prefer-https > invalid(3): // http://sindresorhus.com 1`] = `

  1 | // http://sindresorhus.com

`;

exports[`prefer-https > invalid(3): // http://sindresorhus.com 2`] = `

Message:
> 1 | // http://sindresorhus.com
    |    ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | // https://sindresorhus.com

`;

exports[`prefer-https > invalid(30): const uri = \"http://maven.apache.org/DOWNLOAD/1.0\"; 1`] = `

  1 | const uri = "http://maven.apache.org/DOWNLOAD/1.0";

`;

exports[`prefer-https > invalid(30): const uri = \"http://maven.apache.org/DOWNLOAD/1.0\"; 2`] = `

Message:
> 1 | const uri = "http://maven.apache.org/DOWNLOAD/1.0";
    |              ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://maven.apache.org/DOWNLOAD/1.0";

`;

exports[`prefer-https > invalid(31): const uri = \"http://www.springframework.org/schema/beans/spring-beans.xsd\"; 1`] = `

  1 | const uri = "http://www.springframework.org/schema/beans/spring-beans.xsd";

`;

exports[`prefer-https > invalid(31): const uri = \"http://www.springframework.org/schema/beans/spring-beans.xsd\"; 2`] = `

Message:
> 1 | const uri = "http://www.springframework.org/schema/beans/spring-beans.xsd";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.springframework.org/schema/beans/spring-beans.xsd";

`;

exports[`prefer-https > invalid(32): const uri = \"http://www.springframework.org/schema/beans?version=1\"; 1`] = `

  1 | const uri = "http://www.springframework.org/schema/beans?version=1";

`;

exports[`prefer-https > invalid(32): const uri = \"http://www.springframework.org/schema/beans?version=1\"; 2`] = `

Message:
> 1 | const uri = "http://www.springframework.org/schema/beans?version=1";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://www.springframework.org/schema/beans?version=1";

`;

exports[`prefer-https > invalid(33): const uri = \"http://purl.org/dc/terms/title/document\"; 1`] = `

  1 | const uri = "http://purl.org/dc/terms/title/document";

`;

exports[`prefer-https > invalid(33): const uri = \"http://purl.org/dc/terms/title/document\"; 2`] = `

Message:
> 1 | const uri = "http://purl.org/dc/terms/title/document";
    |              ^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://purl.org/dc/terms/title/document";

`;

exports[`prefer-https > invalid(34): const uri = \"http://purl.org/dc/terms/title?format=xml\"; 1`] = `

  1 | const uri = "http://purl.org/dc/terms/title?format=xml";

`;

exports[`prefer-https > invalid(34): const uri = \"http://purl.org/dc/terms/title?format=xml\"; 2`] = `

Message:
> 1 | const uri = "http://purl.org/dc/terms/title?format=xml";
    |              ^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://purl.org/dc/terms/title?format=xml";

`;

exports[`prefer-https > invalid(35): const uri = \"http://purl.org/dc/terms/title.\"; 1`] = `

  1 | const uri = "http://purl.org/dc/terms/title.";

`;

exports[`prefer-https > invalid(35): const uri = \"http://purl.org/dc/terms/title.\"; 2`] = `

Message:
> 1 | const uri = "http://purl.org/dc/terms/title.";
    |              ^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://purl.org/dc/terms/title.";

`;

exports[`prefer-https > invalid(36): const uri = \"http://schemas.android.com/apk/res/android.\"; 1`] = `

  1 | const uri = "http://schemas.android.com/apk/res/android.";

`;

exports[`prefer-https > invalid(36): const uri = \"http://schemas.android.com/apk/res/android.\"; 2`] = `

Message:
> 1 | const uri = "http://schemas.android.com/apk/res/android.";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const uri = "https://schemas.android.com/apk/res/android.";

`;

exports[`prefer-https > invalid(37): const url = \"http://test.com\"; 1`] = `

  1 | const url = "http://test.com";

`;

exports[`prefer-https > invalid(37): const url = \"http://test.com\"; 2`] = `

Message:
> 1 | const url = "http://test.com";
    |              ^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://test.com";

`;

exports[`prefer-https > invalid(38): const url = \"http://local.example.com\"; 1`] = `

  1 | const url = "http://local.example.com";

`;

exports[`prefer-https > invalid(38): const url = \"http://local.example.com\"; 2`] = `

Message:
> 1 | const url = "http://local.example.com";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://local.example.com";

`;

exports[`prefer-https > invalid(4): // http://sindresorhus.com, 1`] = `

  1 | // http://sindresorhus.com,

`;

exports[`prefer-https > invalid(4): // http://sindresorhus.com, 2`] = `

Message:
> 1 | // http://sindresorhus.com,
    |    ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | // https://sindresorhus.com,

`;

exports[`prefer-https > invalid(5): const element = <a href=\"http://sindresorhus.com\">https://sindresorhus.com</a>; 1`] = `

  1 | const element = <a href="http://sindresorhus.com">https://sindresorhus.com</a>;

`;

exports[`prefer-https > invalid(5): const element = <a href=\"http://sindresorhus.com\">https://sindresorhus.com</a>; 2`] = `

Message:
> 1 | const element = <a href="http://sindresorhus.com">https://sindresorhus.com</a>;
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const element = <a href="https://sindresorhus.com">https://sindresorhus.com</a>;

`;

exports[`prefer-https > invalid(6): const element = <a href=\"https://sindresorhus.com\">http://sindresorhus.com</a>; 1`] = `

  1 | const element = <a href="https://sindresorhus.com">http://sindresorhus.com</a>;

`;

exports[`prefer-https > invalid(6): const element = <a href=\"https://sindresorhus.com\">http://sindresorhus.com</a>; 2`] = `

Message:
> 1 | const element = <a href="https://sindresorhus.com">http://sindresorhus.com</a>;
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const element = <a href="https://sindresorhus.com">https://sindresorhus.com</a>;

`;

exports[`prefer-https > invalid(7): const urls = [\n\t\t\t\"http://sindresorhus.com\",\n\t\t\t\"http://example.com\",\n\t\t]; 1`] = `

  1 | const urls = [
  2 | 			"http://sindresorhus.com",
  3 | 			"http://example.com",
  4 | 		];

`;

exports[`prefer-https > invalid(7): const urls = [\n\t\t\t\"http://sindresorhus.com\",\n\t\t\t\"http://example.com\",\n\t\t]; 2`] = `

Message:
  1 | const urls = [
> 2 | 			"http://sindresorhus.com",
    | 			 ^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.
  3 | 			"http://example.com",
  4 | 		];

Output:
  1 | const urls = [
  2 | 			"https://sindresorhus.com",
  3 | 			"http://example.com",
  4 | 		];

`;

exports[`prefer-https > invalid(7): const urls = [\n\t\t\t\"http://sindresorhus.com\",\n\t\t\t\"http://example.com\",\n\t\t]; 3`] = `

Message:
  1 | const urls = [
  2 | 			"http://sindresorhus.com",
> 3 | 			"http://example.com",
    | 			 ^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.
  4 | 		];

Output:
  1 | const urls = [
  2 | 			"http://sindresorhus.com",
  3 | 			"https://example.com",
  4 | 		];

`;

exports[`prefer-https > invalid(8): const url = \"http://user:password@sindresorhus.com\"; 1`] = `

  1 | const url = "http://user:password@sindresorhus.com";

`;

exports[`prefer-https > invalid(8): const url = \"http://user:password@sindresorhus.com\"; 2`] = `

Message:
> 1 | const url = "http://user:password@sindresorhus.com";
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://user:password@sindresorhus.com";

`;

exports[`prefer-https > invalid(9): const url = \"http://êxample.com\"; 1`] = `

  1 | const url = "http://êxample.com";

`;

exports[`prefer-https > invalid(9): const url = \"http://êxample.com\"; 2`] = `

Message:
> 1 | const url = "http://êxample.com";
    |              ^^^^^^^^^^^^^^^^^^ Prefer HTTPS over HTTP.

Output:
  1 | const url = "https://êxample.com";

`;
